Fix: layot was causing text overlapping on medium screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,10 @@ body {
     color: #2F4858;
 }
 
+/* .main-label-color {
+    color: #8D4846 !important;
+} */
+
 .add-task-color {
     background-color: #2F4858;
     border: #2F4858;
